tests/errors/dup_member.HC
//ERR: duplicate member
class D { I64 x; I64 x; };
D d;
